src/objects/LookupChild__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description2__c</fullName>
        <label>Description 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LookupParent2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lookup Parent 2</label>
        <referenceTo>LookupParent__c</referenceTo>
        <relationshipLabel>Lookup Children (Lookup Parent 2)</relationshipLabel>
        <relationshipName>LookupChildren2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LookupParent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lookup Parent</label>
        <referenceTo>LookupParent__c</referenceTo>
        <relationshipLabel>Lookup Children</relationshipLabel>
        <relationshipName>LookupChildren</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Lookup Child</label>
    <nameField>
        <label>Lookup Child Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lookup Children</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>